width.height update

--- a/standings.html
+++ b/standings.html
@@ -53,7 +53,7 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Standings</h1>
-							<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQBMBsRDqobxseDFNtiX7ERo6Qs_rRS5hWmqV1GxF6ElDxb-7jelK1W6v5BxLr2lSoTCB1e8RlNQOp/pubhtml?gid=1580257966&amp;single=true&amp;widget=true&amp;headers=false" style="width: 376px;height: 365px;"></iframe>
+							<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTQBMBsRDqobxseDFNtiX7ERo6Qs_rRS5hWmqV1GxF6ElDxb-7jelK1W6v5BxLr2lSoTCB1e8RlNQOp/pubhtml?gid=1580257966&amp;single=true&amp;widget=true&amp;headers=false" style="width: 100%px;height: 390px;"></iframe>
 							<p>Weekly Standings.</p>
 						</div>
 					</div>
