--- a/standings.html
+++ b/standings.html
@@ -125,6 +125,11 @@
 		                         wanted: [ "Standings" ],
 		                         debug: true } )
 		      })
+
+		      function showInfo(data) {
+                // data comes through as a simple array since simpleSheet is turned on
+                console.log(data);
+              }
 		         
 		    </script>
 
