standings width issue

--- a/standings.html
+++ b/standings.html
@@ -59,7 +59,7 @@
 							<table id="pretty" class="table">
 							  <thead>
 							  	<th>Rank</th>
-							  	<th>Team</th>
+							  	<th class="team">Team</th>
 							  	<th>Record</th>
 							  	<th class="top6">Top 6</th>
 							  	<th>Pts For</th>
